# confluence-publisher-rs

./: Cargo.toml  LICENSE.md  Makefile.toml  README.md
src/: lib.rs  publisher.rs  reader.rs  util.rs  yml.rs
